styles.css
@font-face {
    font-family: cavs;
    src: url("fonts/NBA-Cavaliers.woff2") format("woff2");
}

.sound-list {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-evenly;
    width: 95%;
    max-width: 60em;
    margin: 30px auto 15px auto;
}

#sounds {
    width: 100%;
}

body, html {
    height: 100%;
    overflow-y: auto;
}

body {
    font-family: 'cavs', sans-serif;
    letter-spacing: 0.04em;
    text-align: center;
    display: flex;
    flex-direction: column;
    margin: 0;
    align-items: center;
    background: rgb(77,26,41);
    background: linear-gradient(180deg, rgba(77,26,41,1) 0%, rgba(114,37,61,1) 50%, rgba(114,37,61,1) 100%);
}

button {
    background-color: #b4975a;
    border: none;
    width: 9em;
    border-radius: 5px;
    padding: 15px;
    color: black;
    font-size: 25px;
    box-shadow:  0 3px 6px rgb(0 0 0 / 40%);
    justify-content: center;
    margin: 50px 0 0 0;
}

h1 {
    color: #B4975A;
    font-size: 50px;
    text-shadow: 0 3px 4px rgb(0 0 0 / 55%);
    font-style: italic;
    font-weight: 500;
    filter: brightness(1.2);
    margin: 30px 0 0 0;
}

label {
    display: block;
}

.announcer-option {
    padding: 20px;
    border-radius: 5px;
    margin: 5px;
    background-color: #5e1f32;
    box-shadow: 0 3px 6px rgb(0 0 0 / 40%);
    border: 2px solid #b4975a;
    user-select: none;
    -ms-user-select: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.announcer-option:hover, button:hover {
    transform: scale(1.05);
    transition: ease-out 0.2s;
    cursor: pointer;
    filter: brightness(1.2);
}

.active-sound:hover {
    transform: scale(1.075);
    transition: ease-out 0.2s;
    cursor: pointer;
    filter: brightness(1.3);
}

.sound label:hover {
    cursor: pointer;
}

.announcer-name {
    color: #d7d7d7;
    font-weight: bold;
    font-size: 30px;
    font-family: 'cavs', sans-serif;
    margin-top: 10px;
}

.announcer-image img {
    border-radius: 50%;
    width: 200px;
    height: 200px;
    user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
}

.loading {
    filter: opacity(0.5) brightness(1) !important;
}

.invisible {
    visibility: hidden;
}

.loading::after {
    content: '...';
    visibility: visible;
    position: absolute;
    font-size: 20px;
    bottom: 45%;
    left: 46%;
}

#announcer-select {
    margin-top: 50px;
    width: 100%;
    justify-content: space-evenly;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    margin-bottom: 3em;
    max-width: 65em;
}

#header {
    display: flex;
    align-items: center;
    flex-direction: column;
}

#header img {
    width: 100px;
    filter: drop-shadow(0 3px 4px rgb(0 0 0 / 55%)) brightness(1.2);
}

#header a img {
    width: 20px;
    height: 20px;
    margin-left: 5px;
}

a {
    color: #d8b56c;
    display: flex;
    align-items: center;
    margin-top: 20px;
}

.sound img {
    width: 50px;
    position: absolute;
    bottom: 0;
    left: 39%;
    user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
}

.sound {
    position: relative;
    width: 200px;
    height: 85px;
    font-size: 20px;
    color: #d7d7d7;
    background-color: #5e1f32;
    padding: 10px;
    border-radius: 5px;
    border: 3px solid #b4975a;
    box-shadow: 0 3px 6px rgb(0 0 0 / 40%);
    margin: 10px;
    user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
    font-family: tahoma, sans-serif;
}

@keyframes fade-and-slide {
    0% {
        opacity: 0;
        transform: translateY(20px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

@media(max-width: 500px) {
    h1 {
        font-size: 25px;
    }

    #header img {
        width: 50px;
    }

    .announcer-name {
        font-size: 20px;
    }

    .announcer-option {
        width: 180px;
        height: 190px;
        padding: 10px;
    }

    #announcer-select {
        margin-top: 20px;
    }

    .announcer-option img {
        width: 130px;
        height: 130px;
    }

    .sound {
        width: 130px;
        font-size: 16px;
        margin: 5px;
    }

    .loading::after {
        left: 44%;
        bottom: 44%;
    }

    .sound img {
        left: 34%;
    }

    button {
        font-size: 20px;
    }
}

